<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/return_button_description" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="32sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:text="@string/create_account_text"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />


    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="62dp"
        android:textColor="@color/colorWhite"
        android:text="@string/label_email_text"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sign_in_text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/label_email"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/hint_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="11sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorWhite"
        android:text="@string/hint_email_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/email"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/label_sign_in_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:text="@string/label_password_text"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/hint_email" />

    <RelativeLayout
        android:id="@+id/view_group_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/label_sign_in_password">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <ImageButton
            android:id="@+id/password_visibility_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/ic_visibility_off_black_24dp"
            android:contentDescription="@string/password_visibility_icon_description" />
    </RelativeLayout>


    <TextView
        android:id="@+id/hint_password"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:textSize="11sp"
        android:textColor="@color/colorWhite"
        android:text="@string/hint_password_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view_group_password"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTransparentBlack"
        android:background="@drawable/rounded_button"
        app:backgroundTint="@color/colorExtraTransparentWhite"
        android:layout_marginRight="8dp"
        android:text="@string/next_button_text"
        android:textSize="17sp"
        android:layout_below="@+id/hint_password" />

</RelativeLayout>